k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: quick-note
  namespace: quick-note

spec: 
  replicas: 1

  selector:
    matchLabels:
      app: quick-note
  
  template:
    metadata:
      labels:
        app: quick-note
  
    spec:
      containers:
        - name: quick-note
          image: asia-south1-docker.pkg.dev/quck-note/quick-note/quick-note:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "25m"
            
            limits:
              memory: "256Mi"
              cpu: "100m"

          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000

            initialDelaySeconds: 60

            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5

          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000

            initialDelaySeconds: 30

            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 3
