k8s/service.yaml
apiVersion: v1
kind: Service

metadata: 
  name: quick-note-service
  namespace: quick-note

spec:
  selector:
    app: quick-note

  ports:
    - protocol: TCP
    - port: 80
    - targetPort: 3000

  type: ClusterIP
