k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: quick-note-ingress
  namespace: quick-note

  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec: 
  ingressClassName: nginx
  tls: 
    - hosts:
      - quicknote.autowhat.app
      secretName: quick-note-tls
  
  rules:
    - host: quicknote.autowhat.app
      http:
        paths:
          - path: / 
            pathType: Prefix
            backend:
              service:
                name: quick-note-service
                port:
                  number: 80
